syntax = "proto3";

package com.salty.protos;

import "entity.proto";

option java_multiple_files = true;

/* [USER] */
// user service
service UserService {
    rpc Register (GrpcReq) returns (GrpcResp) {
    }

    rpc Login (GrpcReq) returns (GrpcResp) {
    }
}

/* [SMS CODE] */
service SMSService {
    rpc ObtainSMSCode (GrpcReq) returns (GrpcResp) {
    }
}
