
syntax = "proto3";

package com.salty.protos;

import "entity.proto";

option java_multiple_files = true;


service SMSService {
    //获取验证码
    rpc ObtainSMSCode (GrpcReq) returns (GrpcResp) {
    }
}

//sms服务就是短信服务，邮件相关的接口要独立出来
message ObtainSMSCodeReq {
    CodeType codeType = 1;
    string telephone = 2;
    enum CodeType {
        REGISTER = 0;
        LOGIN = 1;
        ResetPassword = 2;
    }
}

message ObtainSMSCodeResp {

}
